Created Assignments table and viewAssignments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="create_an_accounts">Create an Account</string>
     <string name="updated_class_name">Updated Class Name</string>
     <string name="update_class">Update Class</string>
+    <string name="your_assignments">Your Assignments</string>
 </resources>
